--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,9 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.10"
-dependencies = []
+dependencies = [
+    "bs4>=0.0.2",
+    "pandas>=2.3.1",
+    "pyttsx3>=2.99",
+    "requests>=2.32.4",
+]
